<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negro"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Registrarse">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/negro"
            android:gravity="center"
            android:orientation="vertical"
            tools:context=".Principal">
            <EditText
                android:layout_width="280dp"
                android:layout_height="70dp"
                android:id="@+id/nombre"
                android:background="@drawable/button"
                android:hint="@string/texto16"
                android:textSize="20dp"
                android:gravity="center"
                android:textColorHint="@color/blanco"
                android:layout_margin="2dp"
                android:textColor="@color/blanco"
                />
            <EditText
                android:layout_width="280dp"
                android:layout_height="70dp"
                android:id="@+id/apellidos"
                android:background="@drawable/button"
                android:hint="@string/texto15"
                android:textSize="20dp"
                android:gravity="center"
                android:textColorHint="@color/blanco"
                android:layout_margin="5dp"
                android:textColor="@color/blanco"
                />
            <EditText
                android:layout_width="280dp"
                android:layout_height="70dp"
                android:id="@+id/telefono"
                android:background="@drawable/button"
                android:hint="@string/texto1"
                android:textSize="20dp"
                android:gravity="center"
                android:textColorHint="@color/blanco"
                android:layout_margin="5dp"
                android:textColor="@color/blanco"
                />
            <EditText
                android:layout_width="280dp"
                android:layout_height="70dp"
                android:id="@+id/confirmarTel"
                android:background="@drawable/button"
                android:hint="@string/texto8"
                android:textSize="20dp"
                android:gravity="center"
                android:textColorHint="@color/blanco"
                android:layout_margin="5dp"
                android:textColor="@color/blanco"
                />
            <EditText
                android:layout_width="280dp"
                android:layout_height="70dp"
                android:id="@+id/pin"
                android:background="@drawable/button"
                android:hint="@string/texto2"
                android:textSize="20dp"
                android:gravity="center"
                android:textColorHint="@color/blanco"
                android:layout_margin="5dp"
                android:textColor="@color/blanco"
                />
            <EditText
                android:layout_width="280dp"
                android:layout_height="70dp"
                android:id="@+id/confirmarPin"
                android:background="@drawable/button"
                android:hint="@string/texto9"
                android:textSize="20dp"
                android:gravity="center"
                android:textColorHint="@color/blanco"
                android:layout_margin="5dp"
                android:textColor="@color/blanco"
                />
            <EditText
                android:layout_width="280dp"
                android:layout_height="70dp"
                android:id="@+id/email"
                android:background="@drawable/button"
                android:hint="@string/texto7"
                android:textSize="20dp"
                android:gravity="center"
                android:textColorHint="@color/blanco"
                android:layout_margin="5dp"
                android:textColor="@color/blanco"
                />
            <EditText
                android:layout_width="280dp"
                android:layout_height="70dp"
                android:id="@+id/casa"
                android:background="@drawable/button"
                android:hint="@string/texto17"
                android:textSize="20dp"
                android:gravity="center"
                android:textColorHint="@color/blanco"
                android:layout_margin="5dp"
                android:textColor="@color/blanco"
                />
            <EditText
                android:layout_width="280dp"
                android:layout_height="70dp"
                android:id="@+id/oficina"
                android:background="@drawable/button"
                android:hint="@string/texto18"
                android:textSize="20dp"
                android:gravity="center"
                android:textColorHint="@color/blanco"
                android:layout_margin="5dp"
                android:textColor="@color/blanco"
                />
            <Button
                android:layout_width="180dp"
                android:id="@+id/registrar"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:text="@string/texto6"
                android:textSize="16dp"
                android:layout_margin="5dp"
                android:textColor="@color/blanco"
                android:gravity="center"

                />



        </LinearLayout>

    </ScrollView>



</LinearLayout>