<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negro"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Recuperar_Contra">

    <EditText
        android:layout_width="280dp"
        android:layout_height="100dp"
        android:id="@+id/telefono"
        android:background="@drawable/button"
        android:hint="@string/texto1"
        android:textSize="20dp"
        android:gravity="center"
        android:textColorHint="@color/blanco"
        android:layout_margin="10dp"
        android:textColor="@color/blanco"
        />
    <EditText
        android:layout_width="280dp"
        android:layout_height="100dp"
        android:id="@+id/confirmarTel"
        android:background="@drawable/button"
        android:hint="@string/texto8"
        android:textSize="20dp"
        android:gravity="center"
        android:textColorHint="@color/blanco"
        android:layout_margin="10dp"
        android:textColor="@color/blanco"
        />
    <Button
        android:layout_width="180dp"
        android:id="@+id/enviar"
        android:layout_height="70dp"
        android:background="@drawable/button"
        android:text="@string/texto6"
        android:textSize="16dp"
        android:layout_margin="10dp"
        android:textColor="@color/blanco"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        />





</LinearLayout>